# ci-release-test

./: .gitattributes  CITATION.cff  LICENSE  MANIFEST.in  README.md  setup.cfg
.circleci/: config.yml
psyplot_ci_release_test.egg-info/: PKG-INFO  SOURCES.txt
