[metadata]
name = psyplot-ci-release-test
description = A test repository for the psyplot release workflow
url = https://github.com/psyplot/ci-release-test
author = Phiilpp S. Sommer
author_email = philipp.sommer@hereon.de
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
python_requires = >=3.7
packages = find:

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = release_test/_version.py
versionfile_build = release_test/_version.py
tag_prefix = v
parentdir_prefix = psyplot-ci-release-test-
